lab3/Serice.yaml
apiVersion: v1
kind: Service
metadata:
  name: ruslan-serv
spec:
  selector:
    app: ifilyaninitmo
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
